--- a/mindbell-app/res/values-de/arrays.xml
+++ b/mindbell-app/res/values-de/arrays.xml
@@ -52,5 +52,24 @@
 	<item>23:00</item>
 </string-array>
 
+	<string-array name="daysOfWeek">
+		<item>Montag</item>
+		<item>Dienstag</item>
+		<item>Mittwoch</item>
+		<item>Donnerstag</item>
+		<item>Freitag</item>
+		<item>Samstag</item>
+		<item>Sonntag</item>
+	</string-array>
+	
+	<string-array name="daysOfWeekValues">
+		<item>2</item>
+		<item>3</item>
+		<item>4</item>
+		<item>5</item>
+		<item>6</item>
+		<item>7</item>
+		<item>1</item>
+	</string-array>
 
 </resources>
