--- a/mindbell-app/res/values/arrays.xml
+++ b/mindbell-app/res/values/arrays.xml
@@ -93,6 +93,24 @@
 </string-array>
 
 
-
+	<string-array name="daysOfWeek">
+		<item>Sunday</item>
+		<item>Monday</item>
+		<item>Tuesday</item>
+		<item>Wednesday</item>
+		<item>Thursday</item>
+		<item>Friday</item>
+		<item>Saturday</item>
+	</string-array>
+	
+	<string-array name="daysOfWeekValues">
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+		<item>4</item>
+		<item>5</item>
+		<item>6</item>
+		<item>7</item>
+	</string-array>
 
 </resources>
