--- a/mindbell-app/res/values/arrays.xml
+++ b/mindbell-app/res/values/arrays.xml
@@ -54,7 +54,7 @@
 
 <!-- Values - don't localize: -->
 
-<string-array name="bellFrequencyValues">
+<string-array name="bellFrequencyValues" translatable="false">
 	<item>300000</item><!-- 5 minutes -->
 	<item>600000</item><!-- 10 minutes -->
 	<item>900000</item><!-- 15 minutes -->
@@ -65,7 +65,7 @@
 	<item>14400000</item><!-- 4 hours -->
 </string-array>
 
-<string-array name="hourValues">
+<string-array name="hourValues" translatable="false">
 	<item>0</item>
 	<item>1</item>
 	<item>2</item>
