--- a/mindbell-app/res/values-de/arrays.xml
+++ b/mindbell-app/res/values-de/arrays.xml
@@ -52,6 +52,7 @@
 	<item>23:00</item>
 </string-array>
 
+	<!-- Weekdays for selection in MindBellPreferences -->
 	<string-array name="daysOfWeek">
 		<item>Montag</item>
 		<item>Dienstag</item>
@@ -62,6 +63,7 @@
 		<item>Sonntag</item>
 	</string-array>
 	
+	<!-- Internal value (regarding Calendar) for the weekday selection in MindBellPreferences -->	
 	<string-array name="daysOfWeekValues">
 		<item>2</item>
 		<item>3</item>
@@ -70,6 +72,17 @@
 		<item>6</item>
 		<item>7</item>
 		<item>1</item>
+	</string-array>
+
+	<!-- Abbreviations for weekdays ordered by their internal value -->
+	<string-array name="weekdayAbbreviations">
+		<item>SO</item>
+		<item>MO</item>
+		<item>DI</item>
+		<item>MI</item>
+		<item>DO</item>
+		<item>FR</item>
+		<item>SA</item>
 	</string-array>
 
 </resources>
